[gd_scene load_steps=2 format=3 uid="uid://mnjmgf4dxou5"]

[ext_resource type="Script" path="res://scripts/ui/digital_bank/action_pop_up_view.gd" id="1_fxs3b"]

[node name="ActionsPopup" type="ColorRect"]
offset_right = 100.0
offset_bottom = 154.0
mouse_filter = 1
script = ExtResource("1_fxs3b")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -41.0
offset_top = -50.5
offset_right = 41.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="MoveButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Move Bot"

[node name="AddButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Add Bot"

[node name="ViewButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "View Bot"

[node name="CloseButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Close"
